Issue #3100514: Add related/recommended modules to composer.json suggest section

--- a/help/default/help.page.bibcite.html
+++ b/help/default/help.page.bibcite.html
@@ -8,7 +8,7 @@ This module requires the following libraries:
 <ul>
     <li>"academicpuma/citeproc-php": "~1.0"</li>
     <li>"adci/full-name-parser": "^0.2"</li>
-    <li>"technosophos/LibRIS": "~2.0"</li>
+    <li>"technosophos/libris": "~2.0"</li>
     <li>"audiolabs/bibtexparser": "dev-master"</li>
     <li>"caseyamcl/php-marc21": "~1.0"</li>
 </ul>
