--- a/help/default/help.page.bibcite.html
+++ b/help/default/help.page.bibcite.html
@@ -4,6 +4,11 @@
 It is a core module that provides API for a render of bibliography citation. The library we used is from official CSL style repository with over 8000 styles. Those styles are available without charge under a Creative Commons Attribution-ShareAlike (BY-SA) license.
 
 <h2>Dependencies</h2>
+This module requires the following modules:
+<ul>
+    <li><a href="https://www.drupal.org/project/entity">Entity API</a></li>
+    <li><a href="https://www.drupal.org/project/token">Token</a></li>
+</ul>
 This module requires the following libraries:
 <ul>
     <li>"academicpuma/citeproc-php": "~1.0"</li>
